fix src check style