@@ -29,6 +29,7 @@ public abstract class EzyAbstractWriterBuilder
         }
     }
 
+    @SuppressWarnings("unchecked")
     protected EzyWriter make() throws Exception {
         ClassPool pool = ClassPool.getDefault();
         String implClassName = getImplClassName();
@@ -46,7 +47,7 @@ public abstract class EzyAbstractWriterBuilder
         Class answerClass = implClass.toClass();
         implClass.detach();
         logger.debug("class {} has generated", implClassName);
-        return (EzyWriter) answerClass.newInstance();
+        return (EzyWriter) answerClass.getDeclaredConstructor().newInstance();
     }
 
     protected String makeMethodContent(EzyMethod writeMethod) {
