@@ -44,6 +44,7 @@ public class EzySetterBuilder extends EzyLoggable implements EzyBuilder<BiConsum
         }
     }
 
+    @SuppressWarnings("unchecked")
     protected BiConsumer doBuild() throws Exception {
         String implClassName = getImplClassName();
         ClassPool pool = ClassPool.getDefault();
@@ -54,12 +55,12 @@ public class EzySetterBuilder extends EzyLoggable implements EzyBuilder<BiConsum
         implClass.setInterfaces(new CtClass[]{pool.get(BiConsumer.class.getName())});
         Class answerClass = implClass.toClass();
         implClass.detach();
-        return (BiConsumer) answerClass.newInstance();
+        return (BiConsumer) answerClass.getDeclaredConstructor().newInstance();
     }
 
     protected String makeAcceptMethodContent() {
-        Class<?> type = null;
-        String methodName = null;
+        Class<?> type;
+        String methodName;
         if (field != null) {
             type = field.getType();
             methodName = field.getSetterMethod();
